--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,10 +1,5 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
-
+# Reproducible Research: Peer Assessment 1
+January 2015, Andreas von Ballmoos
 
 ## Loading and preprocessing the data
 
